        - Support user localization
        - Make install process easier for non-tech users
        - Add gantt chart
        - Upgrade Vaadin library to 7.1.15
        
    Bug Fixes
        - Application can not allow users upload big file size
        - Fix NPE of email sending when user create then delete item before the email is sent out
        - Cut username display name if it is long too in bug dashboard
        - Align user name center in standup report display
        - Display empty string if user does not enter their last name
    
    Changelog from MyCollab 3.0.0
    =============================
    Improvements
        - Redesign application user interface
        - Redesign email template
        - Dynamic query builder and let user can save query parameters for next search
        - Upgrade MyCollab libraries to higher version
        - Revise standup report and time logging feature
        - Improve code structure and simplify email processing procedure
    
    Bug Fixes
        - Mass update in CRM module throws exception in several special cases
        - Fix exception throw when user back to previous screen
        - MyCollab cache views even when user sign out the site
        - Upload file in Chrome display upload window two times
        - Fix several wrong links in email
        - Improve datasource configuration to avoid site open many connections if the site is under heavy load
        - Fix database connection bottleneck in unit test cases if we run all batch tests
    
    Changelog from MyCollab 2.0.0
    =============================
    Improvements
        - Upgrade UI architect from Vaadin 6 to Vaadin 7
        - Refactor to share common codes for both web desktop and web mobile.
        - Update icons for CRM types and tabsheet
        - Update icons for Project types and tabsheet
        - Make icons more consistent of size and color
        - Add Convert Lead feature